sumo/tests/sumo/errors/one_edge_route/errors.sumo.exe
Error: SUMO assumes each route to be at least two edges long ('route' has 1).
